--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@
 #
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
+DATABASE_URL="mysql://root:@127.0.0.1:3306/examenp"
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
